--- a/run.ipynb
+++ b/run.ipynb
@@ -33,6 +33,141 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "18144a6b-c266-453d-82c8-b5d6aa1be0aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from zenml.client import Client\n",
+    "\n",
+    "artifact = Client().get_artifact('57be5ee8-5580-4821-801e-832e2a719dd1')\n",
+    "loaded_artifact = artifact.load()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0a031fe9-6847-4691-9b49-008ac8147d7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@USAirways Hooray! I've now been on hold for o...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@VirginAmerica Is there anything going on with...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@united kind of unnerving to watch the guy dei...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>@United is the best way to re-unite me with my...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@united education of that staff is needed - he...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1610</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@united One of your workers refused to give me...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1611</th>\n",
+       "      <td>1</td>\n",
+       "      <td>@USAirways thanks for giving away my seat. Ano...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1612</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@VirginAmerica status match program.  I applie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1613</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Made it to #Costa #Rica and back @JetBlue Miss...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1614</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@SouthwestAir I fly back to Omaha for my grand...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1615 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      label                                               text\n",
+       "0         0  @USAirways Hooray! I've now been on hold for o...\n",
+       "1         0  @VirginAmerica Is there anything going on with...\n",
+       "2         0  @united kind of unnerving to watch the guy dei...\n",
+       "3         1  @United is the best way to re-unite me with my...\n",
+       "4         0  @united education of that staff is needed - he...\n",
+       "...     ...                                                ...\n",
+       "1610      0  @united One of your workers refused to give me...\n",
+       "1611      1  @USAirways thanks for giving away my seat. Ano...\n",
+       "1612      0  @VirginAmerica status match program.  I applie...\n",
+       "1613      0  Made it to #Costa #Rica and back @JetBlue Miss...\n",
+       "1614      0  @SouthwestAir I fly back to Omaha for my grand...\n",
+       "\n",
+       "[1615 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pd.DataFrame({'label': loaded_artifact['train']['label'], 'text': loaded_artifact['train']['text']})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "30b4a2a5-5f02-458d-a0c8-0e09518ef52a",
    "metadata": {},
