--- a/run.ipynb
+++ b/run.ipynb
@@ -19,6 +19,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "500e3c24-b105-4a69-b2fc-e0ce1f1c1d46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do the imports at the top\n",
+    "\n",
+    "import numpy as np\n",
+    "from datasets import DatasetDict, load_dataset\n",
+    "from typing_extensions import Annotated\n",
+    "from zenml import step\n",
+    "from zenml.logger import get_logger\n",
+    "\n",
+    "import os\n",
+    "from typing import Optional\n",
+    "from datetime import datetime as dt\n",
+    "\n",
+    "from zenml import pipeline\n",
+    "from zenml.model import ModelConfig\n",
+    "\n",
+    "from steps import (\n",
+    "    data_loader,\n",
+    "    notify_on_failure,\n",
+    "    tokenization_step,\n",
+    "    tokenizer_loader,\n",
+    "    generate_reference_and_comparison_datasets,\n",
+    ")\n",
+    "from zenml.integrations.evidently.metrics import EvidentlyMetricConfig\n",
+    "from zenml.integrations.evidently.steps import (\n",
+    "    EvidentlyColumnMapping,\n",
+    "    evidently_report_step,\n",
+    ")\n",
+    "\n",
+    "from pipelines import (\n",
+    "    sentinment_analysis_deploy_pipeline,\n",
+    "    sentinment_analysis_promote_pipeline,\n",
+    "    sentinment_analysis_training_pipeline,\n",
+    ")\n",
+    "\n",
+    "logger = get_logger(__name__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fc77b660-e206-46b1-a924-407e797a8f47",
    "metadata": {},
@@ -46,17 +90,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from datasets import DatasetDict, load_dataset\n",
-    "from typing_extensions import Annotated\n",
-    "from zenml import step\n",
-    "\n",
     "@step\n",
     "def data_loader() -> Annotated[DatasetDict, \"dataset\"]:\n",
     "    logger.info(f\"Loading dataset airline_reviews... \")\n",
-    "    dataset = load_dataset(\"Shayanvsf/US_Airline_Sentiment\")\n",
-    "    # dataset = sample_dataset(dataset)\n",
-    "    return dataset\n"
+    "    hf_dataset = load_dataset(\"Shayanvsf/US_Airline_Sentiment\")\n",
+    "    hf_dataset = hf_dataset.rename_column(\"airline_sentiment\", \"label\")\n",
+    "    hf_dataset = hf_dataset.remove_columns(\n",
+    "        [\"airline_sentiment_confidence\", \"negativereason_confidence\"]\n",
+    "    )\n",
+    "    return hf_dataset"
    ]
   },
   {
@@ -76,8 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = data_loader.entrypoint()\n",
-    "print(dataset)"
+    "hf_dataset = data_loader.entrypoint()\n",
+    "print(hf_dataset)"
    ]
   },
   {
@@ -91,6 +133,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9511bd84-1e97-42db-9b75-06285cc6904c",
+   "metadata": {},
+   "source": [
+    "### Set your stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76f3a7e7-0d85-43b3-9e9f-4c7f20ea65e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!zenml stack describe hf-sagemaker-local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04b0bf69-70c6-4408-b18c-95df9e030c0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!zenml stack set hf-sagemaker-local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de5398a4-a9ec-42d6-bbd6-390244c52d13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!zenml stack get"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "152f718d-70c2-4a29-a73e-37db85675cb8",
+   "metadata": {},
+   "source": [
+    "### Run the pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7ca6c41e-e4b3-46d2-8264-9a453ac9aa3c",
@@ -99,27 +187,6 @@
    },
    "outputs": [],
    "source": [
-    "from typing import Optional\n",
-    "\n",
-    "from zenml import pipeline\n",
-    "from zenml.logger import get_logger\n",
-    "\n",
-    "from steps import (\n",
-    "    data_loader,\n",
-    "    notify_on_failure,\n",
-    "    tokenization_step,\n",
-    "    tokenizer_loader,\n",
-    "    generate_reference_and_comparison_datasets,\n",
-    ")\n",
-    "from zenml.integrations.evidently.metrics import EvidentlyMetricConfig\n",
-    "from zenml.integrations.evidently.steps import (\n",
-    "    EvidentlyColumnMapping,\n",
-    "    evidently_report_step,\n",
-    ")\n",
-    "\n",
-    "logger = get_logger(__name__)\n",
-    "\n",
-    "\n",
     "@pipeline(on_failure=notify_on_failure)\n",
     "def sentinment_analysis_feature_engineering_pipeline(\n",
     "    lower_case: Optional[bool] = True,\n",
@@ -172,60 +239,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b8bb29e-670b-4fed-95c4-26a87793daa8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from datetime import datetime as dt\n",
-    "from typing import Optional\n",
-    "\n",
-    "import click\n",
-    "from zenml.client import Client\n",
-    "from zenml.enums import ModelStages\n",
-    "from zenml.logger import get_logger\n",
-    "from zenml.model import ModelConfig\n",
-    "\n",
-    "# Run a pipeline with the required parameters. This executes\n",
-    "# all steps in the pipeline in the correct order using the orchestrator\n",
-    "# stack component that is configured in your active ZenML stack.\n",
-    "config_folder = os.path.join(\n",
-    "        os.path.dirname(os.path.realpath(__file__)),\n",
-    "        \"configs\",\n",
-    ")\n",
-    "model_config = ModelConfig(\n",
-    "    name=zenml_model_name,\n",
-    "    license=\"Apache 2.0\",\n",
-    "    description=\"Show case Model Control Plane.\",\n",
-    "    create_new_model_version=True,\n",
-    "    delete_new_version_on_failure=True,\n",
-    "    tags=[\"sentiment_analysis\", \"huggingface\"],\n",
-    ")\n",
-    "\n",
-    "pipeline_args = {}\n",
-    "\n",
-    "if no_cache:\n",
-    "    pipeline_args[\"enable_cache\"] = False\n",
-    "\n",
-    "# Execute Feature Engineering Pipeline\n",
-    "if feature_pipeline:\n",
-    "    pipeline_args[\"model_config\"] = model_config\n",
-    "    pipeline_args[\"config_path\"] = os.path.join(config_folder, \"feature_engineering_config.yaml\")\n",
-    "    run_args_feature = {\n",
-    "        \"max_seq_length\": max_seq_length,\n",
-    "    }\n",
-    "    pipeline_args[\n",
-    "        \"run_name\"\n",
-    "    ] = f\"sentinment_analysis_feature_engineering_pipeline_run_{dt.now().strftime('%Y_%m_%d_%H_%M_%S')}\"\n",
-    "    sentinment_analysis_feature_engineering_pipeline.with_options(**pipeline_args)(\n",
-    "        **run_args_feature\n",
-    "    )\n",
-    "    logger.info(\"Feature Engineering pipeline finished successfully!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3c8a5be7-ebaa-41c4-ac23-4afc6e7e06aa",
    "metadata": {},
    "outputs": [],
@@ -272,11 +285,12 @@
    "outputs": [],
    "source": [
     "from zenml.client import Client\n",
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.display import display, HTML\n",
     "\n",
     "client = Client()\n",
-    "run = client.get_pipeline_run(\"sentinment_analysis_feature_engineering_pipeline_run_2023_11_20_22_10_15\")\n",
-    "html = run.steps[\"evidently_report_step\"].outputs['report_html'].load()\n",
+    "# CHANGE THIS TO THE LATEST RUN ID\n",
+    "latest_run = client.get_pipeline_run(\"sentinment_analysis_feature_engineering_pipeline_run_2023_11_21_10_55_56\")\n",
+    "html = latest_run.steps[\"evidently_report_step\"].outputs['report_html'].load()\n",
     "display(HTML(html))"
    ]
   },
@@ -304,6 +318,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c99b20f-8e3b-4119-86e9-33dd1395470a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_args[\"config_path\"] = os.path.join(\"configs\", \"trainer_config.yaml\")\n",
+    "\n",
+    "pipeline_args[\"enable_cache\"] = True\n",
+    "\n",
+    "run_args_train = {\n",
+    "    \"num_epochs\": 1,\n",
+    "    \"train_batch_size\": 64,\n",
+    "    \"eval_batch_size\": 64,\n",
+    "    \"learning_rate\": 2e-4,\n",
+    "    \"weight_decay\": 0.01,\n",
+    "    \"max_seq_length\": 512,\n",
+    "}\n",
+    "\n",
+    "# Use versioned artifacts from the last step\n",
+    "# run_args_train[\"dataset_artifact_id\"] = latest_run.steps['tokenization_step'].output.id\n",
+    "# run_args_train[\"tokenizer_artifact_id\"] = latest_run.steps['tokenizer_loader'].output.id\n",
+    "\n",
+    "# Configure the model\n",
+    "pipeline_args[\"model_config\"] = model_config\n",
+    "\n",
+    "pipeline_args[\n",
+    "    \"run_name\"\n",
+    "] = f\"sentinment_analysis_training_run_{dt.now().strftime('%Y_%m_%d_%H_%M_%S')}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96592299-0090-4d2a-962e-6ca232c1fb75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentinment_analysis_training_pipeline.with_options(**pipeline_args)(\n",
+    "    **run_args_train\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e24e29de-6d1b-41da-9ab2-ca2b32f1f540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Check out a new stack\n",
+    "!zenml stack describe hf-sagemaker-airflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c9a5bee-8465-4d41-888a-093f1f6a2ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Change the stack\n",
+    "!zenml stack set hf-sagemaker-airflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3772c50-1c90-4ffc-8394-c9cfca16cc53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentinment_analysis_training_pipeline.with_options(**pipeline_args)(\n",
+    "    **run_args_train\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "be79f454-a45d-4f5f-aa93-330d52069124",
    "metadata": {},
@@ -319,6 +411,46 @@
     "Following training, the automated promotion pipeline evaluates models against predefined metrics, identifying and marking the most performant one as 'Production ready'. This is another common use case for the Model Control Plane; we store the relevant metrics there to access them easily later.\n",
     "\n",
     "<img src=\"assets/promoting_pipeline_overview.png\" alt=\"Pipelines Trains\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bac7ae5-70d0-449c-929c-e175c3062f2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!zenml stack set hf-sagemaker-local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "170c9ef6-4e6f-4e50-ac37-e05bef8570ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_args_promoting = {}\n",
+    "model_config = ModelConfig(name=zenml_model_name)\n",
+    "pipeline_args[\"config_path\"] = os.path.join(\"configs\", \"promoting_config.yaml\")\n",
+    "\n",
+    "pipeline_args[\"model_config\"] = model_config\n",
+    "\n",
+    "pipeline_args[\n",
+    "    \"run_name\"\n",
+    "] = f\"sentinment_analysis_promoting_pipeline_run_{dt.now().strftime('%Y_%m_%d_%H_%M_%S')}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6df11e2-4591-4186-a8f8-243f9c4d1e3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentinment_analysis_promote_pipeline.with_options(**pipeline_args)(\n",
+    "    **run_args_promoting\n",
+    ")"
    ]
   },
   {
@@ -342,10 +474,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1513ab5f-de05-4344-9d2c-fedbfbd21ef0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!zenml stack set hf-sagemaker-local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "606fdb3c-4eca-4d32-bccb-280743d15528",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pipeline_args[\"config_path\"] = os.path.join(\"configs\", \"deploying_config.yaml\")\n",
+    "\n",
+    "# Deploying pipeline has new ZenML model config\n",
+    "model_config = ModelConfig(\n",
+    "    name=zenml_model_name,\n",
+    "    version=ModelStages.PRODUCTION,\n",
+    ")\n",
+    "pipeline_args[\"model_config\"] = model_config\n",
+    "pipeline_args[\"enable_cache\"] = False\n",
+    "run_args_deploying = {}\n",
+    "pipeline_args[\n",
+    "    \"run_name\"\n",
+    "] = f\"sentinment_analysis_deploy_pipeline_run_{dt.now().strftime('%Y_%m_%d_%H_%M_%S')}\""
+   ]
   },
   {
    "cell_type": "code",
@@ -353,31 +509,11 @@
    "id": "87f1f982-ab96-4207-8e7e-e318473587e9",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e78099f-79cd-4652-9270-38de7cb9b233",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20f82716-13ab-4765-af57-9d1859e4613f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2821e591-c416-4f7e-9231-2b322564c344",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "sentinment_analysis_deploy_pipeline.with_options(**pipeline_args)(\n",
+    "    **run_args_deploying\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -386,18 +522,10 @@
    "source": [
     "ZenML builds upon the straightforward deployment capability of Huggingface models to AWS Sagemaker, and transforms it into a sophisticated, repeatable, and transparent MLOps workflow. It takes charge of the intricate steps necessary for modern ML systems, ensuring that software engineering leads can focus on iteration and innovation rather than operational intricacies.\r\n",
     "\r\n",
-    "To delve deeper into each stage, refer to the comprehensive guide on GitHub: zenml-io/zenml-huggingface-sagemaker. Additionally, this YouTube playlist provides a detailed visual walkthrough of the entire pipeline: Huggingface to Sagemaker ZenML tutorial.\r\n",
+    "To delve deeper into each stage, refer to the comprehensive guide on GitHub[: zenml-io/zenml-huggingface-sagemak](https://github.com/zenml-io/zenml-huggingface-sagemaker)er. Additionally[, this YouTube playli](https://www.youtube.com/watch?v=Q1EH2H8Akgo&list=PLhNrLW_IWplw6dBbmGcL828-atJMu3CwF)st provides a detailed visual walkthrough of the entire pipeline: Huggingface to Sagemaker ZenML tutorial.\r\n",
     "\r\n",
-    "Interested in standardizing your MLOps workflows? ZenML Cloud is now available to all - get a managed ZenML server with important features such as RBAC and pipeline triggers. Book a demo with us now to learn how you can create your own MLOps pipelines today."
+    "Interested in standardizing your MLOps workflows? ZenML Cloud is now available to all - get a managed ZenML server with important features such as RBAC and pipeline trigge[rs. Book a ](https://zenml.io/book-a-demo)demo with us now to learn how you can create your own MLOps pipelines today."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "178d6b67-f786-464a-9b7e-cc98e01c1669",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
